Pique: Fix issues with widget block centre alignment.

--- a/pique/assets/css/blocks.css
+++ b/pique/assets/css/blocks.css
@@ -449,15 +449,14 @@ body.home .wp-block-table.alignwide .wp-block-table.alignfull {
 6.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
-/* Categories, Latest Posts & Archives */
+/* General Widget styles */
 
 .wp-block-categories.aligncenter,
 .wp-block-categories.aligncenter ul,
+.wp-block-archives.aligncenter,
 .wp-block-latest-posts.aligncenter,
-.wp-block-archives.aligncenter {
+.wp-block-latest-comments.aligncenter {
 	list-style-position: inside;
-	margin-left: 0;
-	margin-right: 0;
 	text-align: center;
 }
 
